manifests/base/kube-prometheus-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboards-grafana-redirect-http
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-redirect-to-https@kubernetescrd # <namespace>-<middleware_name>@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: dashboards.zmuda.pro
      http:
        paths:
          - backend:
              service:
                name: dashboards-grafana
                port:
                  number: 80
            path: /
            pathType: Prefix

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
